todo-k8s/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30090
