todo-k8s/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: todo-selfsigned
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - todo.local
      secretName: todo-tls-certmanager
  rules:
  - host: todo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 9090
